--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="hp_red">#FF4A4A</color>
+    <color name="hp_green">#7FFF00</color>
+
+    <color name="btn_green">#7FFF00</color>
+    <color name="bg_dark">#2A2A2A</color>
+    <color name="bg_builds">#D9D9D9</color>
+    <color name="bg_boss_grey">#838383</color>
+
+    <color name="card_red">#EF4444</color>
+    <color name="card_blue">#66B3FF</color>
+    <color name="card_lime_green">#A6FFCB</color>
+
+    <color name="overlay_black_A91">#E8000000</color>
+    <color name="white_A70">#B3FFFFFF</color>
 </resources>
