--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:background="@color/bg_dark">
 
     <Button
-        android:id="@+id/btnStartGame"
+        android:id="@+id/btnBackToMainMenu"
         android:layout_width="200dp"
         android:layout_height="64dp"
         android:backgroundTint="@color/btn_green"
@@ -33,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnStartGame"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackToMainMenu"
         app:layout_constraintVertical_bias="0.073"/>
 
     <RadioGroup
