Add onClick to start game and removed default code from  Bossfragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="hp_red">#FF4A4A</color>
+    <color name="hp_red_darker">#870404</color>
+
     <color name="hp_green">#7FFF00</color>
 
     <color name="btn_green">#7FFF00</color>
