--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,12 +4,20 @@
         <item name="android:layout_width">264dp</item>
         <item name="android:layout_height">64dp</item>
         <item name="android:background">@drawable/build_radio_background</item>
-       <!---> <item name="android:button">@null</item> <!-->
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">@font/iceberg</item>
         <item name="android:layout_marginBottom">24dp</item>
+        <!---> <item name="android:button">@null</item> <!-->
+    </style>
+
+    <style name="BossNameStyle">
+        <item name="android:fontFamily">@font/iceberg</item>
+        <item name="android:text">Boss Name</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">48sp</item>
     </style>
 </resources>
 
