--- a/app/src/main/res/layout/fragment_boss.xml
+++ b/app/src/main/res/layout/fragment_boss.xml
@@ -10,16 +10,17 @@
 
     <TextView
         android:id="@+id/textBossName"
+        style="@style/BossNameStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/BossNameStyle"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/viewBossHp"
         android:layout_width="341dp"
         android:layout_height="36dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/boss_hp_bar"
+        android:background="@drawable/hp_bar_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textBossName" />
@@ -38,7 +39,7 @@
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:background="@color/bg_boss_grey"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
