--- a/app/src/main/res/layout/fragment_boss.xml
+++ b/app/src/main/res/layout/fragment_boss.xml
@@ -13,7 +13,9 @@
         style="@style/BossNameStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <View
         android:id="@+id/viewBossHp"
@@ -38,6 +40,7 @@
         android:id="@+id/imgBoss"
         android:layout_width="240dp"
         android:layout_height="240dp"
+        android:layout_marginTop="24dp"
         android:background="@color/bg_boss_grey"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground"
