--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -8,16 +8,31 @@
     tools:background="@color/bg_dark">
 
 
+    <TextView
+        android:id="@+id/textPlayerBuild"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/iceberg"
+        android:textColor="@color/white_A70"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:text="Build: -"
+        app:layout_constraintBottom_toTopOf="@id/viewPlayerHp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <View
         android:id="@+id/viewPlayerHp"
         android:layout_width="341dp"
         android:layout_height="36dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/hp_bar_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.653" />
+        app:layout_constraintVertical_bias="0.45" />
 
     <View
         android:id="@+id/viewPlayerHpFill"
@@ -29,6 +44,43 @@
         app:layout_constraintTop_toTopOf="@+id/viewPlayerHp"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/playerAttack"
+        style="@style/PlayerCards"
+        android:layout_width="128dp"
+        android:layout_height="160dp"
+        android:backgroundTint="@color/card_red"
+        android:text="@string/CardAttackText"
+        app:cornerRadius="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/playerShield"
+        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
+    <Button
+        android:id="@+id/playerShield"
+        style="@style/PlayerCards"
+        android:layout_width="128dp"
+        android:layout_height="160dp"
+        android:backgroundTint="@color/card_blue"
+        android:text="@string/CardShieldText"
+        app:cornerRadius="16dp"
+        app:layout_constraintStart_toEndOf="@id/playerAttack"
+        app:layout_constraintEnd_toStartOf="@+id/playerHeal"
+        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/playerHeal"
+        style="@style/PlayerCards"
+        android:layout_width="128dp"
+        android:layout_height="160dp"
+        android:backgroundTint="@color/card_lime_green"
+        android:text="@string/CardHealText"
+        app:cornerRadius="16dp"
+        app:layout_constraintStart_toEndOf="@id/playerShield"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/viewPlayerHp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
