--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">@font/iceberg</item>
         <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:radioButtonStyle">@color/hp_red</item>
         <!---> <item name="android:button">@null</item> <!-->
     </style>
 
@@ -18,6 +19,13 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">48sp</item>
+    </style>
+
+    <style name="PlayerCards">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAlignment">center</item>
     </style>
 </resources>
 
