--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_dark">
-
     <FrameLayout
         android:id="@+id/bossFragmentContainer"
         android:layout_width="match_parent"
@@ -24,5 +23,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_weight="1"/>
+
+
+    <View
+        android:id="@+id/overlayBossDefeated"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B3000000"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/textBossDefeated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/you_won_round"
+        android:textSize="48sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/iceberg"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <Button
+        android:id="@+id/btnNextBoss"
+        android:layout_width="256dp"
+        android:layout_height="64dp"
+        android:backgroundTint="@color/btn_green"
+        android:textColor="@color/black"
+        android:layout_marginTop="64dp"
+        android:text="@string/btn_nextboss"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/textBossDefeated"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
