--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -58,4 +58,37 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <View
+        android:id="@+id/overlayPlayerDefeated"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B3000000"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/textPlayerDefeated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_you_died"
+        android:textSize="48sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/iceberg"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <Button
+        android:id="@+id/btnTryAgain"
+        android:layout_width="256dp"
+        android:layout_height="64dp"
+        android:backgroundTint="@color/hp_red_darker"
+        android:textColor="@color/black"
+        android:layout_marginTop="64dp"
+        android:text="@string/btn_try_again"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/textPlayerDefeated"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
