--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_dark">
+
     <FrameLayout
         android:id="@+id/bossFragmentContainer"
         android:layout_width="match_parent"
@@ -29,65 +30,73 @@
         android:id="@+id/overlayBossDefeated"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#B3000000"
-        android:visibility="gone" />
+        style="@style/OverlayBackgroundView"/>
 
     <TextView
         android:id="@+id/textBossDefeated"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/you_won_round"
-        android:textSize="48sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/iceberg"
-        android:visibility="gone"
+        style="@style/OverlayTitleText"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
     <Button
         android:id="@+id/btnNextBoss"
-        android:layout_width="256dp"
-        android:layout_height="64dp"
         android:backgroundTint="@color/btn_green"
-        android:textColor="@color/black"
-        android:layout_marginTop="64dp"
         android:text="@string/btn_nextboss"
-        android:visibility="gone"
+        style="@style/OverlayPrimaryButton"
         app:layout_constraintTop_toBottomOf="@id/textBossDefeated"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
 
     <View
         android:id="@+id/overlayPlayerDefeated"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#B3000000"
-        android:visibility="gone" />
+        style="@style/OverlayBackgroundView"/>
 
     <TextView
         android:id="@+id/textPlayerDefeated"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/text_you_died"
-        android:textSize="48sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/iceberg"
-        android:visibility="gone"
+        style="@style/OverlayTitleText"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
     <Button
         android:id="@+id/btnTryAgain"
-        android:layout_width="256dp"
-        android:layout_height="64dp"
         android:backgroundTint="@color/hp_red_darker"
-        android:textColor="@color/black"
-        android:layout_marginTop="64dp"
         android:text="@string/btn_try_again"
-        android:visibility="gone"
+        style="@style/OverlayPrimaryButton"
         app:layout_constraintTop_toBottomOf="@id/textPlayerDefeated"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <View
+        android:id="@+id/overlayGameWon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="@style/OverlayBackgroundView"/>
+
+    <TextView
+        android:id="@+id/textGameWon"
+        style="@style/OverlayTitleText"
+        android:text="@string/game_won_text"
+        android:textAlignment="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/btnWonGame"
+        android:backgroundTint="@color/btn_green"
+        android:text="@string/back_to_main_menu"
+        style="@style/OverlayPrimaryButton"
+        app:layout_constraintTop_toBottomOf="@id/textGameWon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
