--- a/app/src/main/res/layout/fragment_boss.xml
+++ b/app/src/main/res/layout/fragment_boss.xml
@@ -36,6 +36,16 @@
         app:layout_constraintBottom_toBottomOf="@+id/viewBossHp"
         app:layout_constraintStart_toStartOf="@+id/viewBossHp"/>
 
+    <TextView
+        android:id="@+id/textBossHpValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0/0"
+        style="@style/HpValueText"
+        app:layout_constraintTop_toBottomOf="@id/viewBossHp"
+        app:layout_constraintStart_toStartOf="@id/viewBossHp"
+        app:layout_constraintEnd_toEndOf="@id/viewBossHp"/>
+
     <ImageView
         android:id="@+id/imgBoss"
         android:layout_width="240dp"
